--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+click==8.1.8
 contourpy==1.3.1
 cycler==0.12.1
 fonttools==4.55.6
+joblib==1.4.2
 kiwisolver==1.4.8
 matplotlib==3.10.0
+nltk==3.9.1
 numpy==2.2.2
 packaging==24.2
 pillow==11.1.0
 psycopg2==2.9.10
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+regex==2024.11.6
 six==1.17.0
+tqdm==4.67.1
