--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ pillow==11.1.0
 platformdirs==4.3.6
 protobuf==5.29.3
 psutil==6.1.1
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 pyparsing==3.2.1
