--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ joblib==1.4.2
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.0
+more-itertools==10.6.0
 mpmath==1.3.0
 networkx==3.4.2
 nltk==3.9.1
